# rocket-cgi

./: Cargo.toml  README.md
examples/: cgi-test.pl  cgi.rs  cgi.sh
src/: lib.rs  os.rs
test/: .simple.sh  env_vars.sh  params.sh  post.sh  redirect.sh  shell.sh  simple.cmd  simple.pl  simple.py
