[package]
name = "rocket-cgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false }
tokio = { version = "*", default-features = false, features = ["process", "io-util"] }
