[package]
name = "rocket-cgi"
version = "0.2.1"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Simple CGI (RFC 3875) handler for Rocket"
repository = "https://github.com/the10thWiz/rocket-cgi"
categories = ["web-programming::rocket", "web-programming", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false }
tokio = { version = "1.6.1", default-features = false, features = ["process", "io-util"] }
bitfield = "0.14.0"
